# nflow

./: .gitignore  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.claude/skills/write-nflow/: SKILL.md
.github/workflows/: docs.yml
docs/: NFLOW.md  index.md
docs/nodes/: index.md
examples/: agent.nflow  data-pipeline.nflow  devops-alerts.nflow  encrypted_creds.json  generic-nodes.nflow  image-crop-tool-track-status.nflow  mongo-api.nflow  reddit-api-http-nodes.nflow
scripts/: extract-node-registry.py  generate-node-reference.py  n8n-sync.sh
src/nflow/: __init__.py  __main__.py  compiler.py
tests/: test_compiler.py
